커스텀 훅 분리, 방어상성표 추가

--- a/src/main/frontend/src/routes/Detail/Detail.module.css
+++ b/src/main/frontend/src/routes/Detail/Detail.module.css
@@ -33,3 +33,20 @@
     margin-right: 2px;
     /*font-size: 10px;*/
 }
+
+/*방어상성 테이블*/
+.damageTable{
+    width:400px;
+    border: 1.5px solid dimgray;
+}
+.damageTable tr, .damageTable td{
+    border: 1.5px solid dimgray;
+
+}
+.tdKey{
+    width:20%;
+    text-align: center;
+}
+.tdVal{
+    width:80%;
+}
