진화트리, 성별 버튼 추가 (이미지 변경)

--- a/src/main/frontend/src/routes/Detail/Detail.module.css
+++ b/src/main/frontend/src/routes/Detail/Detail.module.css
@@ -1,3 +1,11 @@
+/*성별 버튼*/
+.femaleBtn {
+    border-radius: 50%;
+    border: none;
+    background-color: #CEA6FF;
+    padding: 8px
+}
+
 /* 이로치 버튼 */
 .shinyBtn {
     border-radius: 50%;
