--- a/src/main/frontend/src/routes/QuizSetup/QuizSetup.module.css
+++ b/src/main/frontend/src/routes/QuizSetup/QuizSetup.module.css
@@ -14,16 +14,22 @@
     font-family: 'Galmuri9', sans-serif;
 }
 
+.sub{
+    margin-bottom: 0;
+    font-family: 'Galmuri9', sans-serif;
+    font-size: 19px;
+}
+
 .section {
     text-align: center;
-    margin: 30px 0;
+    margin: 25px 0;
     /*border-bottom : 2px solid gray;*/
     padding: 0 10px;
 }
 
 .buttonGroup {
     display: flex;
-    gap: 1rem;
+    gap: 0.9rem;
     justify-content: center;
     flex-wrap: wrap;
 }
@@ -61,7 +67,7 @@
 
 
 .startButton {
-    margin-top: 1rem;
+    margin: 1rem 0;
     background: #d62828;
     color: #ffffff;
     font-size: 1.1rem;
