--- a/src/main/frontend/src/routes/QuizPlay/QuizPlay.module.css
+++ b/src/main/frontend/src/routes/QuizPlay/QuizPlay.module.css
@@ -1,7 +1,7 @@
 .wrapper {
     border-radius: 20px;
     background-color: #FFE2D9;
-    margin: 90px 20px 0 20px;
+    margin: 90px 20px 20px 20px;
     padding: 20px;
     text-align: center;
     min-height: 70vh;
