--- a/src/main/frontend/src/App.css
+++ b/src/main/frontend/src/App.css
@@ -1,7 +1,8 @@
 @import url('https://cdn.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css');
+@import url('https://cdn.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css');
 
 body, #root {
-    font-family: 'Galmuri11', sans-serif;
+    font-family: 'Galmuri11', 'Galmuri9', sans-serif;
     min-height: 100vh;
     margin: 0;
 }
