--- a/src/main/frontend/src/routes/Home/Home.module.css
+++ b/src/main/frontend/src/routes/Home/Home.module.css
@@ -38,7 +38,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+    /*box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);*/
     color: dimgray;
     position: relative;
     min-height: 350px;
